--- a/3rdparty/rcheevos/rcheevos.vcxproj
+++ b/3rdparty/rcheevos/rcheevos.vcxproj
@@ -4,6 +4,7 @@
   <Import Project="$(SolutionDir)common\vsprops\WinSDK.props" />
   <PropertyGroup Label="Globals">
     <ProjectGuid>{6D5B5AD9-1525-459B-939F-A5E1082AF6B3}</ProjectGuid>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="Configuration">
